public/css/main.css
/* ... */
.page-header {
  max-width: 1024px;
  width: 100%;
}

.title {
  width: 100%;
  background-image: url('../img/Title.png');
  padding-bottom: 19.5%;
  background-size: contain;
  text-indent: -9999;
  height: 0px;
}

h2 {
  text-align: center;
  font-family: 'Metamorphous', cursive;
  text-shadow: 2px 2px 3px #000;
}

.wall {
  width: 100%;
  height: calc(100% - 25vw);
  background: url('../img/WallTop.png')  repeat-x 61% 0% / 100% auto border-box,
          url('../img/WallRepeat.png')  repeat-y 5% 0% / 100% auto content-box;
  padding-top: 8%;

  top: 25vw;

  position: absolute;
  z-index: -1;
}

@media (max-width: 768px) {
  .page-header {
    margin: 21px 0 12px;
  }
}

body {
  background-repeat: no-repeat;
  background: linear-gradient(to top, rgba(2, 0, 0, 0.4), rgba(225, 255, 255, 0.1)), url('../img/Background.jpg') 0px -5vw / 100% auto;
  font-family: 'Metamorphous', cursive;
  min-width: 550px;
}

hr {
  border-top: #333 4px solid;
  width: calc(100% + 80px);
  margin: 21px -40px;
}

.wrapper {
  max-width: 1024px;
  width: 100%;
  display: flex;
  flex-flow: column;
  height: 100%;
}

header {
  flex: 0 1 auto;
}

nav ul {
  display: flex;
}

nav li {
  flex: 1 1 auto;
  margin: 0px;
  background-color: #222;
  border-radius: 5px 5px 0px 0px;
  text-align: center;

  border: 4px solid #333;
}

nav>ul.nav-tabs>li.active {
  border-bottom: none;
  background-color: #444;
}

nav>ul.nav-tabs>li>a {
  color: #BBB;
}

nav>ul.nav-tabs>li>a:hover {
  color: #FFF;
  background-color: #444;
}

nav>ul.nav-tabs>li.active>a, nav>ul.nav-tabs>li.active>a:hover {
  background-color: initial;
  color: #FFF;
  cursor: pointer;
}

nav li:not(:first-child){
  margin-left: 40px; //2.5px;
}

main {
  background: linear-gradient(to top, #333, #444);

  border: 4px solid #333;
  border-radius: 0px 0px 5px 5px;

  flex: 1 1 auto;

  margin-top: -4px;
  padding: 10px 40px;
  padding-bottom: 40px;
  box-sizing: content-box;
}

footer {
  flex: 0 1 auto;
  margin-top: 10px;
  background-color: #444;
  border-radius: 5px 5px 0px 0px;
  border: 4px solid #333;
  border-bottom: none;
  padding: 5px;
  box-sizing: content-box;
}

.play-game {
  text-align: center;
}

.btn-major {
  font-size: 40px;
  margin: 30px auto;
  width: 400px;
  max-width: 100%;
  position: relative;
  background-color: #DDD;
  border-color: #222;
  border-width: 4px;
  color: #000;
  text-shadow: 1px 1px 1px #FFF;
}

.btn-major:hover, .btn-major:disabled:hover {
  background-color: #FFF;
  color: #000;
  border-color: #000;
}

.queue-timer {
  text-align: center;
  width: 250px;
  margin: auto;
}

.well {
  border: 4px solid #333;
  background-color: #DDD;
  color: #000;
}

